--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -6,7 +6,7 @@ body {
 	font-family: Verdana, Geneva, sans-serif;
 	background-color: #000;
 }
-#divWrapper {
+#Wrapper {
 	width:700px;
 	margin:20px auto;
 } 
@@ -15,7 +15,7 @@ Header {
 	background: url(../img/header-bg.jpg);
 	text-align:center;
 }
-#divHeader img {
+#Header img {
 	padding-top:20px;
 	padding-bottom:20px;
 }
@@ -25,23 +25,23 @@ div.Line {
 	height:1px;
 	
 }
-#divLinks {
+#Links {
 	width:700px;
 	background:#666;
 }
-#divNav {
+#Nav {
 	width:384px;
 	background:#666;
 	height:36px;
 	margin:0 auto;
 }
-#divNav ul {
+#Nav ul {
 	list-style-type:none;
 }
-#divNav ul  li {
+#Nav ul  li {
 	float:left;
 }
-#divNav ul li a {
+#Nav ul li a {
 	display:block;
 	height:20px;
 	line-height:20px;
@@ -63,24 +63,24 @@ div.Line {
 	background:-webkit-gradient(linear, left top, left bottom, from(#666), to(#333));
 	
 }
-#divNav ul li a:hover {
+#Nav ul li a:hover {
 	background:#333;
 	background:-moz-linear-gradient(top, #000, #666);
 	background:-webkit-gradient(linear, left top, left bottom, from(#000), to(#666));
 }
-#divNav ul li a.current, #divNav ul li a.current:hover {
+#Nav ul li a.current, #divNav ul li a.current:hover {
 	background:#333;background:-moz-linear-gradient(top, #000, #666);
 	background:-webkit-gradient(linear, left top, left bottom, from(#000), to(#666));
 	color:#f63;
 	cursor:default;
 }
-#divAbout {
+#About {
 	width:700px;
 	background:#333;	
 	padding-top:60px;
 	padding-bottom:60px;
 }
-#divContent {
+#Content {
 	width:430px;
 	margin:0 auto;
 	background:#222;
@@ -97,7 +97,7 @@ div.Line {
 	-moz-box-shadow:10px 10px 4px #000;
 	-webkit-box-shadow:10px 10px 4px #000;
 }
-#divContent img {
+#Content img {
 	float:left; 
 	border:1px solid #000;
 	background:#333;
@@ -111,7 +111,7 @@ div.Line {
 	-moz-border-radius:15px;
 	-webkit-border-radius:15px;
 }
-#divContent h5{
+#Content h5{
 	color:#FFF;
 	padding-top:0.8em;
 	padding-bottom:0;
@@ -119,13 +119,13 @@ div.Line {
 	padding-right:0;
 	
 }
-#divContent p{
+#Content p{
 	font-size:0.7em;
 	color:#999;
 	padding:0.7em;
 	line-height:1.5em;
 }
-#divFooter {
+Footer {
 	background:#222;
 	height:10px;
 	width:700px;
