--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -21,9 +21,9 @@ Header {
 }
 
 #Links {
-	width:800px;
+	width:700px;
 	background:#666;
-	border:15px;
+	border: 15px solid red;
 }
 #Nav {
 	width:384px;
