--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -23,7 +23,7 @@ Header {
 #Links {
 	width:700px;
 	background:#666;
-	border: 15px solid red;
+	border: 15px solid #ff4d4d;
 }
 #Nav {
 	width:384px;
