--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -23,7 +23,7 @@ Header {
 #Links {
 	width:700px;
 	background:#666;
-	border:2px solid #ff4d4d;
+	border:0px 1px 1px 0px solid #ff4d4d;
 }
 #Nav {
 	width:384px;
