--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -21,9 +21,9 @@ Header {
 }
 
 #Links {
-	width:700px;
+	width:698px;
 	background:#666;
-	border:0px 1px 1px 0px solid #ff4d4d;
+	border:1px solid #ff4d4d;
 }
 #Nav {
 	width:384px;
