--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -124,7 +124,8 @@ Header {
 }
 Footer {
 	background:#222;
-	height:10px;
+	height:20px;
 	width:700px;
 	border-bottom:1px solid #333;
+	font-size:5px #ff4d4d;
 }
